Feat: 상태 수정 API 에서 정렬순서 제거
