# src/main/resources/static/docs/openapi3.yaml
@@ -1132,7 +1132,7 @@ paths:
                       "statusId" : 2,
                       "statusName" : "할일",
                       "colorCode" : "#FFFFFF",
-                      "sortOrder" : 1,
+                      "sortOrder" : 2,
                       "tasks" : [ {
                         "taskId" : 1,
                         "statusId" : 1,
@@ -1504,7 +1504,7 @@ paths:
       tags:
       - Status
       summary: 프로젝트 상태 변경
-      description: "프로젝트 상태의 이름, 색상 코드, 정렬 순서를 변경합니다."
+      description: "프로젝트 상태의 이름, 색상 코드를 변경합니다."
       operationId: status-controller-v1-docs-test/상태_변경_api_문서를_생성한다
       parameters:
       - name: projectId
@@ -1530,14 +1530,13 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/api-v1-project-projectId-status-statusId-1514376740'
+              $ref: '#/components/schemas/api-v1-project-projectId-status-statusId75349813'
             examples:
               status-controller-v1-docs-test/상태_변경_api_문서를_생성한다:
                 value: |-
                   {
                     "statusName" : "대기중",
-                    "colorCode" : "#FFFFFF",
-                    "sortOrder" : 3
+                    "colorCode" : "#FFFFFF"
                   }
       responses:
         "204":
@@ -1759,39 +1758,6 @@ paths:
           description: "200"
 components:
   schemas:
-    api-v1-user-257767709:
-      type: object
-      properties:
-        password:
-          type: string
-          description: 비밀번호
-        profileImageName:
-          type: string
-          description: 프로필 이미지 이름
-        nickname:
-          type: string
-          description: 닉네임
-        bio:
-          type: string
-          description: 자기소개
-        links:
-          type: array
-          description: 사용자 링크
-          items:
-            oneOf:
-            - type: object
-            - type: boolean
-            - type: string
-            - type: number
-        email:
-          type: string
-          description: 이메일
-        verificationCode:
-          type: string
-          description: 인증코드
-        username:
-          type: string
-          description: 사용자 아이디
     프로젝트 일정 전체 조회 성공 시 응답 예시입니다.:
       title: 프로젝트 일정 전체 조회 성공 시 응답 예시입니다.
       type: array
@@ -1839,6 +1805,39 @@ components:
                   type: number
                   description: 프로젝트 일정 식별자
         description: 상태별 프로젝트 일정 목록
+    api-v1-user-257767709:
+      type: object
+      properties:
+        password:
+          type: string
+          description: 비밀번호
+        profileImageName:
+          type: string
+          description: 프로필 이미지 이름
+        nickname:
+          type: string
+          description: 닉네임
+        bio:
+          type: string
+          description: 자기소개
+        links:
+          type: array
+          description: 사용자 링크
+          items:
+            oneOf:
+            - type: object
+            - type: boolean
+            - type: string
+            - type: number
+        email:
+          type: string
+          description: 이메일
+        verificationCode:
+          type: string
+          description: 인증코드
+        username:
+          type: string
+          description: 사용자 아이디
     api-v1-user-recover-username-1963233032:
       type: object
       properties:
@@ -1848,6 +1847,15 @@ components:
         verificationCode:
           type: string
           description: 이메일로 전송된 인증번호
+    api-v1-project-projectId-status-statusId75349813:
+      type: object
+      properties:
+        statusName:
+          type: string
+          description: 변경할 상태의 이름
+        colorCode:
+          type: string
+          description: 변경할 색상 코드
     api-v1-team-teamId-project-557506802:
       type: array
       description: 팀 ID에 해당하는 프로젝트 목록
@@ -2050,18 +2058,6 @@ components:
           description: 부여할 역할명
     api-v1-user-file486549215:
       type: object
-    api-v1-project-projectId-status-statusId-1514376740:
-      type: object
-      properties:
-        sortOrder:
-          type: number
-          description: 변경할 정렬 순서
-        statusName:
-          type: string
-          description: 변경할 상태의 이름
-        colorCode:
-          type: string
-          description: 변경할 색상 코드
     api-v1-team-id594896981:
       type: object
       properties:
